--- a/alphaproject/src/app/login/login.component.html
+++ b/alphaproject/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     <label for="password">Password:</label>
     <input type="text" id="password" placeholder="Password" [(ngModel)] = password  >
 
-    <button (click)=gestAuth()>Log-in</button>
+    <button class="btn btn-primary" (click)=gestAuth()>Log-in</button>
 </div>
 
 <div *ngIf='!authenticated'>
