--- a/alphaproject/src/app/welcome/welcome.component.html
+++ b/alphaproject/src/app/welcome/welcome.component.html
@@ -1,1 +1,2 @@
-<p>Welcome!, {{utente}} clicca <a routerLink="/articoli"></a>qui per vedere l'elenco degli articoli</p>
+<app-jumbotron [Titolo]="titolo" [SottoTitolo]="sottotitolo" [Show]="false"></app-jumbotron>
+<p>Saluti, {{ utente }} clicca <a routerLink="/articoli">qui</a> per vedere l'elenco degli articoli disponibili.</p>
